--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- Incluye el archivo bundle.js -->
+    <!--suppress HtmlUnknownTarget -->
+    <script src="dist/bundle.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
