--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Greenlash Games"
+      content="Greenlash Games is a small indie game studio based in Ecuador. We make games for mobile and desktop platforms."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,13 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Greenlash Games</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- Incluye el archivo bundle.js -->
-    <!--suppress HtmlUnknownTarget -->
-    <script src="dist/bundle.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
